--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "axios": "^1.6.2",
     "iconsax-react-native": "^0.0.8",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-colors": "^1.0.1",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.13.4",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
