--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -75,6 +75,8 @@ android {
 
     namespace "com.berbagidarah"
     defaultConfig {
+        vectorDrawables.useSupportLibrary = true
+        targetSdkVersion 27
         applicationId "com.berbagidarah"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
@@ -121,3 +123,4 @@ dependencies {
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+apply plugin: 'com.google.gms.google-services'
